# asimov-cogwheel

./: CITATION.cff  LICENSE  README.md  pyproject.toml
.github/: build-docs.yaml
.github/actions/: build-docs.yaml
.github/workflows/: build-docs.yaml  pypi-publish.yaml
asimov_cogwheel/: __main__.py  asimov.py  asimov_template.ini
docs/: asimov.rst  conf.py  index.rst
